# ShuHui-PiDay

./: .gitignore  README.md  Shuhui.spec  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  项目说明.md
.github/workflows/: deploy-pages.yml
docs/: 开发说明.md  用户手册.md  网页活动版.md  规则与文件格式.md  试玩说明.md
output/: playtest-record.csv  verification.json  验证报告.md
output/candidates/: advanced-level-5-latest.json  candidate-001.json  candidate-002.json  candidate-003.json  candidate-004.json  candidate-005.json  candidate-006.json  candidate-007.json  candidate-008.json  candidate-009.json  candidate-010.json  candidate-011.json  candidate-012.json  candidate-013.json  candidate-014.json  candidate-015.json  candidate-016.json  candidate-017.json  candidate-018.json  candidate-019.json  candidate-020.json  candidate-021.json  candidate-022.json  candidate-023.json  candidate-024.json  candidate-025.json  (+35 more)
scripts/: build_activity_pack.py  build_advanced_pack.py  build_windows.ps1  curate_activity_pack.py  export_web_puzzles.py  extend_advanced_pack.py  generate_web_icons.py  gui_entry.py  rebuild_activity_materials.py  renumber_activity_pack.py  run_gui.ps1  start_web_lan.ps1  upgrade_hard_pack.py
tests/: test_difficulty.py  test_generator.py  test_gui.py  test_pack.py  test_render.py  test_solver.py  test_storage.py  test_topology.py  test_web_export.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  puzzle-catalog.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
(+102 files in other folders)
