[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teseshuhui"
version = "0.1.0"
description = "经典数回与圆密堆积特色数回题目生产工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ortools>=9.12,<10",
  "PySide6>=6.8.2,<6.9",
  "reportlab>=4.2,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-cov>=6,<7", "pyinstaller>=6.11,<7", "pdfplumber>=0.11,<1", "pypdf>=5,<7"]

[project.scripts]
shuhui = "shuhui.gui:main"
shuhui-cli = "shuhui.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
